src/objects/inscor__Receipt__c.object
<CustomObject>
    <fields>
        <fullName>Date_Difference__c</fullName>
        <formula>IF( ISBLANK( inscor__Purchase_Order_Line__r.inscor__Expected_Delivery__c ) , NULL,  inscor__Purchase_Order_Line__r.inscor__Expected_Delivery__c  -  DATEVALUE( inscor__Create_Date__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Difference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__AWB_Number__c</fullName>
        <label>AWB Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Assigned_To1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Receipts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Assigned_To_Email__c</fullName>
        <label>Assigned To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>inscor__Comments__c</fullName>
        <label>Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>inscor__Company__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Condition_Code_Received__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Condition Code Received</label>
        <referenceTo>inscor__Condition_Code__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Create_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>inscor__Currency_Conversion_Rate_Date__c</fullName>
        <label>Currency Conversion Rate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Currency_Conversion_Rate__c</fullName>
        <label>Currency Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Currency_Converted_From__c</fullName>
        <label>Currency Converted From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Customer_Exchange_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Exchange Summary</label>
        <referenceTo>inscor__Customer_Exchange_Summary__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Date_Corrected__c</fullName>
        <label>Date Corrected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Doc_Price__c</fullName>
        <label>Doc Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Document_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Receipts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchase Order</fullName>
                </value>
                <value>
                    <fullName>Repair Order</fullName>
                </value>
                <value>
                    <fullName>Exchange Order</fullName>
                </value>
                <value>
                    <fullName>RMA</fullName>
                </value>
                <value>
                    <fullName>Managed Repair</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Exchange_Type__c</fullName>
        <formula>TEXT(inscor__Customer_Exchange_Summary__r.inscor__Original_SO_Line__r.inscor__Exchange_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exchange Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Finalize_Date__c</fullName>
        <label>Finalize Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>inscor__Inventory_Line_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Line ID</label>
        <referenceTo>inscor__Inventory_Line__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>inscor__Inventory_Location__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Manifest_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manifest Line</label>
        <referenceTo>inscor__Manifest_Line__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Manifest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manifest</label>
        <referenceTo>inscor__Manifest__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Off_Unit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Off Unit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Owner_Code__c</fullName>
        <formula>IF(NOT(ISNULL(inscor__Inventory_Line_ID__c)),inscor__Inventory_Line_ID__r.inscor__Owner_Code__r.Name,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Product_Received__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Number Received</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Purchase_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order Line</label>
        <referenceTo>inscor__Purchase_Order_Line__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <referenceTo>inscor__Purchase_Order__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Approved__c</fullName>
        <label>Quantity Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Corrected__c</fullName>
        <label>Quantity Corrected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Paid__c</fullName>
        <label>Quantity Paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Received__c</fullName>
        <label>Quantity Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Rejected__c</fullName>
        <label>Quantity Rejected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__RMA_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RMA Line</label>
        <referenceTo>inscor__RMA_Line__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__RMA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RMA</label>
        <referenceTo>inscor__RMA__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Received_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Received By</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Reference_ID__c</fullName>
        <label>Reference ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Reference__c</fullName>
        <label>Reference #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Rejection_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Rejection_Status__c</fullName>
        <label>Rejection Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Corrected</fullName>
                    <isActive>false</isActive>
                    <label>Corrected</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Repair_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repair Order Line</label>
        <referenceTo>inscor__Repair_Order_Line__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Repair_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repair Order</label>
        <referenceTo>inscor__Repair_Order__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Line</label>
        <referenceTo>inscor__Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Serial_Number_Received__c</fullName>
        <label>Serial Number Received</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Unit_Acquisition_Cost__c</fullName>
        <label>Unit Acquisition Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Unit_Repair_Cost__c</fullName>
        <label>Unit Repair Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>inscor__Work_Order__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Receipt</label>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>inscor__Purchase_Order_Line__c</columns>
        <columns>inscor__Quantity_Received__c</columns>
        <columns>inscor__Quantity_Approved__c</columns>
        <columns>inscor__Quantity_Rejected__c</columns>
        <columns>inscor__Purchase_Order__c</columns>
        <columns>inscor__Repair_Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RID-{0}</displayFormat>
        <label>Receipt ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>